--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "expo": {
-<<<<<<< HEAD
-    "name": "rn-6652410031-thai-province-app",
+    "name": "Thai Province App",
     "slug": "rn-6652410031-thai-province-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -11,48 +10,21 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FF6B35"
     },
-=======
-    "name": "rn_6652410031_app",
-    "slug": "rn_6652410031_app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "rn6652410031app",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
->>>>>>> 1dd945beea3b5117638e5b78c4580b21a6b66b35
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-<<<<<<< HEAD
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-=======
-        "backgroundColor": "#FFD700",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
->>>>>>> 1dd945beea3b5117638e5b78c4580b21a6b66b35
+        "backgroundColor": "#FF6B35"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.example.thaiProvinceApp"
     },
     "web": {
-<<<<<<< HEAD
       "favicon": "./assets/favicon.png"
-=======
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": ["expo-router"],
-    "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
->>>>>>> 1dd945beea3b5117638e5b78c4580b21a6b66b35
     }
   }
 }
