--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-<<<<<<< HEAD
-    "strict": true
-  }
-=======
     "strict": true,
     "paths": {
       "@/*": [
@@ -14,9 +10,6 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.tsx"
   ]
->>>>>>> 1dd945beea3b5117638e5b78c4580b21a6b66b35
 }
